# aoc2020

./: Cargo.toml  README.md
aoc/: Cargo.toml
aoc/src/: lib.rs
src/: input.rs
