[package]
name = "aoc"
version = "0.1.0"
authors = ["Thomas ten Cate <ttencate@gmail.com>"]
edition = "2018"

[dependencies]
euclid = "0.20.5"
generic-array = "0.13.2"
itertools = "0.8.2"
num-traits = "0.2"
num-derive = "0.3"
packed_simd = "0.3.3"
regex = "1"
reqwest = "0.9.5"

[profile.release]
# Enable debug information in release builds.
debug = true

[features]
render = []
