[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Thomas ten Cate <ttencate@gmail.com>"]
edition = "2018"

[dependencies]
aoc = { "path" = "aoc" }
bit-set = "0.5.2"
lazy_static = "1.4.0"
multiset = "0.0.5"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
regex = "1.4.2"

[profile.release]
# Enable debug information in release builds.
debug = true
